==> MillionthOdin16/BMCU370t/src/BambuBus.cpp <==
#include "BambuBus.h"
#include "CRC16.h"
#include "CRC8.h"
#include "config.h"

bool Bambubus_read()
{
    const flash_save_struct *ptr = (const flash_save_struct *)(FLASH_SAVE_ADDRESS);
    
    if ((ptr->check == FLASH_MAGIC_NUMBER) && (ptr->version == BAMBU_BUS_VERSION))
    {
        memcpy(&data_save, ptr, sizeof(data_save));
        return true;
    }
    return false;
}

void Bambubus_save()
{
    Flash_saves(&data_save, sizeof(data_save), FLASH_SAVE_ADDRESS);
}

void send_uart(const unsigned char *data, uint16_t length)
{
    DMA_DeInit(DMA1_Channel4);
    // Configure DMA1 channel 4 for USART1 TX
    Bambubus_DMA_InitStructure.DMA_MemoryBaseAddr = (uint32_t)data;
    Bambubus_DMA_InitStructure.DMA_BufferSize = length;
    DMA_Init(DMA1_Channel4, &Bambubus_DMA_InitStructure);
    DMA_Cmd(DMA1_Channel4, ENABLE);
    GPIOA->BSHR = GPIO_Pin_12;
    // Enable USART1 DMA send
    USART_DMACmd(USART1, USART_DMAReq_Tx, ENABLE);
}

void BambuBUS_UART_Init()
{
    GPIO_InitTypeDef GPIO_InitStructure = {0};
    USART_InitTypeDef USART_InitStructure = {0};
    NVIC_InitTypeDef NVIC_InitStructure = {0};

    RCC_APB2PeriphClockCmd(RCC_APB2Periph_USART1, ENABLE);
    RCC_APB2PeriphClockCmd(RCC_APB2Periph_GPIOA, ENABLE);
    RCC_AHBPeriphClockCmd(RCC_AHBPeriph_DMA1, ENABLE);

    /* USART1 TX-->A.9   RX-->A.10 */
    GPIO_InitStructure.GPIO_Pin = GPIO_Pin_9; // TX
    GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
    GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF_PP;
    GPIO_Init(GPIOA, &GPIO_InitStructure);
    GPIO_InitStructure.GPIO_Pin = GPIO_Pin_10; // RX
    GPIO_InitStructure.GPIO_Mode = GPIO_Mode_IPU;
    GPIO_Init(GPIOA, &GPIO_InitStructure);
    GPIO_InitStructure.GPIO_Pin = GPIO_Pin_12; // DE
    GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
    GPIO_InitStructure.GPIO_Mode = GPIO_Mode_Out_PP;
    GPIO_Init(GPIOA, &GPIO_InitStructure);
    GPIOA->BCR = GPIO_Pin_12;

    USART_InitStructure.USART_BaudRate = 1250000;
    USART_InitStructure.USART_WordLength = USART_WordLength_9b;
    USART_InitStructure.USART_StopBits = USART_StopBits_1;
    USART_InitStructure.USART_Parity = USART_Parity_Even;
    USART_InitStructure.USART_HardwareFlowControl = USART_HardwareFlowControl_None;
    USART_InitStructure.USART_Mode = USART_Mode_Tx | USART_Mode_Rx;

    USART_Init(USART1, &USART_InitStructure);
    USART_ITConfig(USART1, USART_IT_RXNE, ENABLE);
    USART_ITConfig(USART1, USART_IT_TC, ENABLE);

    NVIC_InitStructure.NVIC_IRQChannel = USART1_IRQn;
    NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = 0;
    NVIC_InitStructure.NVIC_IRQChannelSubPriority = 0;
    NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE;
    NVIC_Init(&NVIC_InitStructure);

    // Configure DMA1 channel 4 for USART1 TX
    Bambubus_DMA_InitStructure.DMA_PeripheralBaseAddr = (uint32_t)&USART1->DATAR;
    Bambubus_DMA_InitStructure.DMA_MemoryBaseAddr = (uint32_t)0;
    Bambubus_DMA_InitStructure.DMA_DIR = DMA_DIR_PeripheralDST;
    Bambubus_DMA_InitStructure.DMA_Mode = DMA_Mode_Normal;
    Bambubus_DMA_InitStructure.DMA_PeripheralInc = DMA_PeripheralInc_Disable;
    Bambubus_DMA_InitStructure.DMA_MemoryInc = DMA_MemoryInc_Enable;
    Bambubus_DMA_InitStructure.DMA_Priority = DMA_Priority_VeryHigh;
    Bambubus_DMA_InitStructure.DMA_M2M = DMA_M2M_Disable;
    Bambubus_DMA_InitStructure.DMA_MemoryDataSize = DMA_MemoryDataSize_Byte;
    Bambubus_DMA_InitStructure.DMA_PeripheralDataSize = DMA_PeripheralDataSize_Byte;
    Bambubus_DMA_InitStructure.DMA_BufferSize = 0;

    USART_Cmd(USART1, ENABLE);
}

void BambuBus_init()
{
    bool _init_ready = Bambubus_read();
    crc_8.reset(0x39, 0x66, 0, false, false);
    crc_16.reset(0x1021, 0x913D, 0, false, false);

    if (_init_ready)
    {
        for (int i = 0; i < 4; i++)
        {
            channel_colors[i][0] = data_save.filament[i].color_R;
            channel_colors[i][1] = data_save.filament[i].color_G;
            channel_colors[i][2] = data_save.filament[i].color_B;
            channel_colors[i][3] = data_save.filament[i].color_A;
        }
        // Preserve channel selection when valid data is loaded from flash
        // Only reset filament states but keep the selected channel
    }
    else
    {
        data_save.filament[0].color_R = 0xFF;
        data_save.filament[0].color_G = 0x00;
        data_save.filament[0].color_B = 0x00;
        data_save.filament[1].color_R = 0x00;
        data_save.filament[1].color_G = 0xFF;
        data_save.filament[1].color_B = 0x00;
        data_save.filament[2].color_R = 0x00;
        data_save.filament[2].color_G = 0x00;
        data_save.filament[2].color_B = 0xFF;
        data_save.filament[3].color_R = 0x88;
        data_save.filament[3].color_G = 0x88;
        data_save.filament[3].color_B = 0x88;
        
        // Only reset channel selection when no valid data is available
        data_save.BambuBus_now_filament_num = 0xFF;
    }
    for (auto &j : data_save.filament)
    {
#ifdef _Bambubus_DEBUG_mode_
        j.statu = AMS_filament_stu::online;
#else
        j.statu = AMS_filament_stu::offline;
#endif // DEBUG

        j.motion_set = AMS_filament_motion::idle;
        j.meters = 0;
    }

    BambuBUS_UART_Init();
}

BambuBus_package_type get_packge_type(unsigned char *buf, int length)
{
    if (package_check_crc16(buf, length) == false)
    {
        return BambuBus_package_type::NONE;
    }
    if (buf[1] == 0xC5)
    {

        switch (buf[4])
        {
        case 0x03:
            return BambuBus_package_type::filament_motion_short;
        case 0x04:
            return BambuBus_package_type::filament_motion_long;
        case 0x05:
            return BambuBus_package_type::online_detect;
        case 0x06:
            return BambuBus_package_type::REQx6;
        case 0x07:
            return BambuBus_package_type::NFC_detect;
        case 0x08:
            return BambuBus_package_type::set_filament_info;
        case 0x20:
            return BambuBus_package_type::heartbeat;
        default:
            return BambuBus_package_type::ETC;
        }
    }
    else if (buf[1] == 0x05)
    {
        Bambubus_long_package_analysis(buf, length, &printer_data_long);
        if (printer_data_long.target_address == BambuBus_AMS)
        {
            BambuBus_address = BambuBus_AMS;
        }
        else if (printer_data_long.target_address == BambuBus_AMS_lite)
        {
            BambuBus_address = BambuBus_AMS_lite;
        }

        switch (printer_data_long.type)
        {
        case 0x21A:
            return BambuBus_package_type::MC_online;
        case 0x211:
            return BambuBus_package_type::read_filament_info;
        case 0x218:
            return BambuBus_package_type::set_filament_info_type2;
        case 0x103:
            return BambuBus_package_type::version;
        case 0x402:
            return BambuBus_package_type::serial_number;
        default:
            return BambuBus_package_type::ETC;
        }
    }
    return BambuBus_package_type::NONE;
}

void send_for_long_packge_version(unsigned char *buf, int length)
{
    long_packge_data data;
    Bambubus_long_package_analysis(buf, length, &printer_data_long);
    uint8_t AMS_num = printer_data_long.datas[0];
    if (AMS_num != BambuBus_AMS_num)
        return;
    unsigned char *long_packge_version_version_and_name;

    if (printer_data_long.target_address == BambuBus_AMS)
    {
        long_packge_version_version_and_name = long_packge_version_version_and_name_AMS08;
    }
    else if (printer_data_long.target_address == BambuBus_AMS_lite)
    {
        long_packge_version_version_and_name = long_packge_version_version_and_name_AMS_lite;
    }
    else
    {
        return;
    }

    data.datas = long_packge_version_version_and_name;
    data.data_length = sizeof(long_packge_version_version_and_name_AMS08);
    data.datas[20] = BambuBus_AMS_num;

    data.package_number = printer_data_long.package_number;
    data.type = printer_data_long.type;
    data.source_address = printer_data_long.target_address;
    data.target_address = printer_data_long.source_address;
    Bambubus_long_package_send(&data);
}

void send_for_set_filament(unsigned char *buf, int length)
{
    uint8_t read_num = buf[5];
    uint8_t AMS_num = read_num & 0xF0;
    if (AMS_num != BambuBus_AMS_num)
        return;
    read_num = read_num & 0x0F;
    memcpy(data_save.filament[read_num].ID, buf + 7, sizeof(data_save.filament[read_num].ID));
    data_save.filament[read_num].color_R = buf[15];
    data_save.filament[read_num].color_G = buf[16];
    data_save.filament[read_num].color_B = buf[17];
    data_save.filament[read_num].color_A = buf[18];

    memcpy(&data_save.filament[read_num].temperature_min, buf + 19, 2);
    memcpy(&data_save.filament[read_num].temperature_max, buf + 21, 2);
    memcpy(data_save.filament[read_num].name, buf + 23, sizeof(data_save.filament[read_num].name));
    package_send_with_crc(Set_filament_res, sizeof(Set_filament_res));
    Bambubus_set_need_to_save();
}

BambuBus_package_type BambuBus_run()
{
    BambuBus_package_type stu = BambuBus_package_type::NONE;
    static uint64_t time_set = 0;
    static uint64_t time_motion = 0;

    uint64_t timex = get_time64();

    /*for (auto i : data_save.filament)
    {
        i->motion_set = idle;
    }*/

    if (BambuBus_have_data)
    {
        int data_length = BambuBus_have_data;
        BambuBus_have_data = 0;
        need_debug = false;
        delay(1);
        stu = get_packge_type(buf_X, data_length); // have_data
        switch (stu)
        {
        case BambuBus_package_type::heartbeat:
            time_set = timex + 1000;
            break;
        case BambuBus_package_type::filament_motion_short:
            send_for_motion_short(buf_X, data_length);
            break;
        case BambuBus_package_type::filament_motion_long:
            // need_debug=true;
            send_for_motion_long(buf_X, data_length);
            time_motion = timex + 1000;
            break;
        case BambuBus_package_type::online_detect:
            send_for_online_detect(buf_X, data_length);
            break;
        case BambuBus_package_type::REQx6:
            // send_for_REQx6(buf_X, data_length);
            break;
        case BambuBus_package_type::MC_online:
            send_for_long_packge_MC_online(buf_X, data_length);
            break;
        case BambuBus_package_type::read_filament_info:
            send_for_long_packge_filament(buf_X, data_length);
            break;
        case BambuBus_package_type::version:
            send_for_long_packge_version(buf_X, data_length);
            break;
        case BambuBus_package_type::serial_number:
            send_for_long_packge_serial_number(buf_X, data_length);
            break;
        case BambuBus_package_type::NFC_detect:
            // send_for_NFC_detect(buf_X, data_length);
            break;
        case BambuBus_package_type::set_filament_info:
            send_for_set_filament(buf_X, data_length);
            break;
        case BambuBus_package_type::set_filament_info_type2:
            send_for_set_filament_type2(buf_X,data_length);
            break;
        default:
            break;
        }
    }
    if (timex > time_set)
    {
        stu = BambuBus_package_type::ERROR; // offline
    }
    if (timex > time_motion)
    {
        // set_filament_motion(get_now_filament_num(),idle);
        /*for(auto i:data_save.filament)
        {
            i->motion_set=idle;
        }*/
    }
    if (Bambubus_need_to_save)
    {
        Bambubus_save();
        time_set = get_time64() + 1000;
        Bambubus_need_to_save = false;
    }

    // NFC_detect_run();
    return stu;
}
