==> funTechCn/fake-ams-lite/src/BambuBus.cpp <==
#include "BambuBus.h"
#include "CRC16.h"
#include "CRC8.h"
#define BambuBus_address_AMS08 ((uint16_t)0x700)
#define BambuBus_address_AMSLite ((uint16_t)0x1200)
#define SERSIAL_NUMBER  long_packge_version_serial_number_AMS_lite
#define VERSION_NAME long_packge_version_version_and_name_AMS_lite
#include "flash.h" // 包含用于Flash操作的函数
#define use_flash_addr (256 * 1024)

bool Bambubus_read()
{
    flash_save_struct *ptr = (flash_save_struct *)(XIP_BASE + use_flash_addr);
    if (ptr->check == 0x40614061)
    {
        memcpy(&data_save, (void *)(XIP_BASE + use_flash_addr), sizeof(data_save));
        return true;
    }
    return false;
}

void Bambubus_save()
{
    uint32_t primask = __get_PRIMASK(); // 保存当前中断状态
    __disable_irq();                    // 禁用中断
    flash_range_erase(use_flash_addr, ((sizeof(data_save) / FLASH_SECTOR_SIZE + 1) * FLASH_SECTOR_SIZE));
    flash_range_program(use_flash_addr, (uint8_t *)&data_save, sizeof(data_save));
    __set_PRIMASK(primask); // 恢复之前的中断状态
}

void send_uart(const unsigned char *data, uint16_t length)
{
    TX_IDLE = false;
    digitalWrite(BambuBus_pin_de, 1);
    uart_write_blocking(BambuBus_uart, data, length);
    // if (need_debug)
    // {
    //     DEBUG_hex(data, length);
    //     // need_debug = false;
    // }
    uart_tx_wait_blocking(BambuBus_uart);
    digitalWrite(BambuBus_pin_de, 0);
    TX_IDLE = true;
}

void BambuBUS_UART_Init(uint32_t baudrate)
{
    // 初始化UART
    uart_init(BambuBus_uart, baudrate);
    // 将引脚设置为UART功能
    gpio_set_function(BambuBus_pin_tx, GPIO_FUNC_UART);
    gpio_set_function(BambuBus_pin_rx, GPIO_FUNC_UART);
    // 关闭硬件流
    uart_set_hw_flow(BambuBus_uart, false, false);
    // 设置奇偶位
    uart_set_format(BambuBus_uart, 8, 1, UART_PARITY_EVEN);
    // FIFO
    uart_set_fifo_enabled(BambuBus_uart, true);
    // 注册中断处理函数
    irq_set_exclusive_handler(BambuBus_uart_IRQ, on_uart_rx);
    irq_set_enabled(BambuBus_uart_IRQ, true);
    // 开启接收中断
    uart_set_irq_enables(BambuBus_uart, true, false);
}

void BambuBus_init()
{
    bool _init_ready = Bambubus_read();
    crc_8.reset(0x39, 0x66, 0, false, false);
    crc_16.reset(0x1021, 0x913D, 0, false, false);
    pinMode(BambuBus_pin_de, OUTPUT);

    if (!_init_ready)
    {
        data_save.filament[0][0].color_R = 0xFF;
        data_save.filament[0][0].color_G = 0x00;
        data_save.filament[0][0].color_B = 0x00;
        data_save.filament[0][1].color_R = 0x00;
        data_save.filament[0][1].color_G = 0xFF;
        data_save.filament[0][1].color_B = 0x00;
        data_save.filament[0][2].color_R = 0x00;
        data_save.filament[0][2].color_G = 0x00;
        data_save.filament[0][2].color_B = 0xFF;
        data_save.filament[0][3].color_R = 0x88;
        data_save.filament[0][3].color_G = 0x88;
        data_save.filament[0][3].color_B = 0x88;
        
        data_save.filament[1][0].color_R = 0xC0;
        data_save.filament[1][0].color_G = 0x20;
        data_save.filament[1][0].color_B = 0x20;
        data_save.filament[1][1].color_R = 0x20;
        data_save.filament[1][1].color_G = 0xC0;
        data_save.filament[1][1].color_B = 0x20;
        data_save.filament[1][2].color_R = 0x20;
        data_save.filament[1][2].color_G = 0x20;
        data_save.filament[1][2].color_B = 0xC0;
        data_save.filament[1][3].color_R = 0x60;
        data_save.filament[1][3].color_G = 0x60;
        data_save.filament[1][3].color_B = 0x60;

        data_save.filament[2][0].color_R = 0x80;
        data_save.filament[2][0].color_G = 0x40;
        data_save.filament[2][0].color_B = 0x40;
        data_save.filament[2][1].color_R = 0x40;
        data_save.filament[2][1].color_G = 0x80;
        data_save.filament[2][1].color_B = 0x40;
        data_save.filament[2][2].color_R = 0x40;
        data_save.filament[2][2].color_G = 0x40;
        data_save.filament[2][2].color_B = 0x80;
        data_save.filament[2][3].color_R = 0x40;
        data_save.filament[2][3].color_G = 0x40;
        data_save.filament[2][3].color_B = 0x40;

        data_save.filament[3][0].color_R = 0x40;
        data_save.filament[3][0].color_G = 0x20;
        data_save.filament[3][0].color_B = 0x20;
        data_save.filament[3][1].color_R = 0x20;
        data_save.filament[3][1].color_G = 0x40;
        data_save.filament[3][1].color_B = 0x20;
        data_save.filament[3][2].color_R = 0x20;
        data_save.filament[3][2].color_G = 0x20;
        data_save.filament[3][2].color_B = 0x40;
        data_save.filament[3][3].color_R = 0x20;
        data_save.filament[3][3].color_G = 0x20;
        data_save.filament[3][3].color_B = 0x20;
    }
    for (auto &i : data_save.filament)
    {
        for (auto &j : i)
        {
            #ifdef _Bambubus_DEBUG_mode_
            j.statu = online;
            #else
            j.statu = offline;
            #endif // DEBUG
            
            j.motion_set = waiting;
        }
    }

    BambuBUS_UART_Init(1228800);
}

package_type get_packge_type(unsigned char *buf, int length)
{
    if (package_check_crc16(buf, length) == false)
    {
        return BambuBus_package_ERROR;
    }
    if (buf[1] == 0xC5)
    {

        switch (buf[4])
        {
        case 0x03:
            return BambuBus_package_filament_motion_short;
        case 0x04:
            return BambuBus_package_filament_motion_long;
        case 0x05:
            return BambuBus_package_online_detect;
        case 0x06:
            return BambuBus_package_REQx6;
        case 0x07:
            return BambuBus_package_NFC_detect;
        case 0x08:
            return BambuBus_package_set_filament;
        case 0x20:
            return BambuBus_package_heartbeat;
        default:
            return BambuBus_package_ETC;
        }
    }
    else if (buf[1] == 0x05)
    {
        Bambubus_long_package_analysis(buf, length, &printer_data_long);
        if (printer_data_long.target_address == BambuBus_address_AMS08)
        {
            printer_data_long.target_address = printer_data_long.target_address;
        }
        else if (printer_data_long.target_address == BambuBus_address_AMSLite)
        {
            printer_data_long.target_address = printer_data_long.target_address;
        }

        switch (printer_data_long.type)
        {
        case 0x21A:
            return BambuBus_long_package_MC_online;
        case 0x211:
            return BambuBus_longe_package_filament;
        case 0x103:
        case 0x402:
            return BambuBus_long_package_version;
        default:
            return BambuBus_package_ETC;
        }
    }
    return BambuBus_package_ERROR;
}

void send_for_long_packge_version(unsigned char *buf, int length)
{
    long_packge_data data;
    Bambubus_long_package_analysis(buf, length, &printer_data_long);
    uint8_t AMS_num = printer_data_long.datas[0];
    unsigned char *long_packge_version_serial_number;
    unsigned char *long_packge_version_version_and_name;

    if(printer_data_long.target_address == BambuBus_address_AMS08){
        long_packge_version_serial_number = long_packge_version_serial_number_AMS08;
        long_packge_version_version_and_name = long_packge_version_version_and_name_AMS08;
    }else if(printer_data_long.target_address == BambuBus_address_AMSLite){
        long_packge_version_serial_number = long_packge_version_serial_number_AMS_lite;
        long_packge_version_version_and_name = long_packge_version_version_and_name_AMS_lite;
    }else{
        return;
    }

    switch (printer_data_long.type)
    {
    case 0x402:

        // AMS_num = printer_data_long.datas[33];
        // data.datas = long_packge_version_serial_number;
        // data.data_length = sizeof(long_packge_version_serial_number);
        // data.datas[65] = AMS_num;

        /*AMS_num = printer_data_long.datas[33];
        data.datas = long_packge_version_serial_number;
        data.data_length = sizeof(long_packge_version_serial_number_AMS08);

        data.datas[65] = AMS_num;
        break;*/
        return;
    case 0x103:

        AMS_num = printer_data_long.datas[0];
        data.datas = long_packge_version_version_and_name;
        data.data_length = sizeof(long_packge_version_version_and_name_AMS08);
        data.datas[20] = AMS_num;
        break;
    default:
        return;
    }

    data.package_number = printer_data_long.package_number;
    data.type = printer_data_long.type;
    data.source_address = printer_data_long.target_address;
    data.target_address = printer_data_long.source_address;
    Bambubus_long_package_send(&data);
}

void send_for_Set_filament(unsigned char *buf, int length)
{
    uint8_t read_num = buf[5];
    uint8_t AMS_num = read_num&0xF0;
    read_num=read_num&0x0F;
    now_op_num=read_num;
    memcpy(data_save.filament[AMS_num][read_num].ID, buf + 7, sizeof(data_save.filament[AMS_num][read_num].ID));

    data_save.filament[AMS_num][read_num].color_R = buf[15];
    data_save.filament[AMS_num][read_num].color_G = buf[16];
    data_save.filament[AMS_num][read_num].color_B = buf[17];
    data_save.filament[AMS_num][read_num].color_A = buf[18];

    memcpy(&data_save.filament[AMS_num][read_num].temperature_min, buf + 19, 2);
    memcpy(&data_save.filament[AMS_num][read_num].temperature_max, buf + 21, 2);
    memcpy(data_save.filament[AMS_num][read_num].name, buf + 23, sizeof(data_save.filament[AMS_num][read_num].name));
    package_send_with_crc(Set_filament_res, sizeof(Set_filament_res));
    if (need_debug)DEBUG_hex(Set_filament_res, sizeof(Set_filament_res));
    Bambubus_set_need_to_save();
}

int BambuBus_run()
{
    int stu=0;//online_wait
    static uint64_t time_set=200;
    uint64_t timex=get_time64();
    if(timex>time_set)
    {
        stu=-1;//offline
    }
    if (BambuBus_have_data)
    {
        int data_length = BambuBus_have_data;
        BambuBus_have_data = 0;
        // need_debug = false;
        stu=1;//have_data
        time_set=timex+200;
        cmd = get_packge_type(buf_X, data_length);
        switch (cmd)
        {
        case BambuBus_package_heartbeat://心跳
            break;
        case BambuBus_package_filament_motion_short://
            send_for_Cxx(buf_X, data_length);
            break;
        case BambuBus_package_filament_motion_long:
            send_for_Dxx(buf_X, data_length);
            break;
        case BambuBus_package_online_detect:
            
            send_for_Fxx(buf_X, data_length);
            break;
        case BambuBus_package_REQx6:
            //send_for_REQx6(buf_X, data_length);
            break;
        case BambuBus_long_package_MC_online:
            send_for_long_packge_MC_online(buf_X, data_length);
            break;
        case BambuBus_longe_package_filament://读取耗材信息
            send_for_long_packge_filament(buf_X, data_length);
            break;
        case BambuBus_long_package_version:
            send_for_long_packge_version(buf_X, data_length);
            break;
        case BambuBus_package_NFC_detect:
            // send_for_NFC_detect(buf_X, data_length);
            break;
        case BambuBus_package_set_filament://设置耗材信息
            send_for_Set_filament(buf_X, data_length);
            break;
        default:
            break;
        }
    }
    if (Bambubus_need_to_save)
    {
        Bambubus_save();
        Bambubus_need_to_save = false;
    }
    // HAL_UART_Transmit(&use_Serial.handle,&s,1,1000);

    //NFC_detect_run();
    return stu;
}
